--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactivos",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cecilia1982.github.io/PWFEAR-M3-00/",
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
